--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "jest": "^29.3.1",
-    "typescript": "^4.9.3"
+    "jest": "^29.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
     "babel-jest": "^29.3.1",
-    "prettier": "^2.7.1"
+    "eslint": "^8.55.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "^2.7.1",
+    "typescript": "^5.3.2"
   }
 }
